src/main/java/com/example/vitasofttask/errors/model/ErrorType.java
package com.example.vitasofttask.errors.model;

public enum ErrorType {
    APP,
    DATA_BASE
}
